# spaghetti

./: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml  build.sh  test.sql
assets/: gruvbox.scss  style.scss
css/: style.css
db/: dev.sqlite3
extrusion-dies/: Cargo.toml
extrusion-dies/src/: templates.rs
js/: highlight.pack.js  navhider.js  script.js
migrations/: 20211018212331_posts.sql  20211018212401_tags.sql  20211018212431_post-tag-relations.sql  20211028022741_about.sql  20211119111851_unique_info_name.sql  20231206184409_counts.sql  20231207021851_counts_timestamp.sql
migrations/2020-07-13-080355_initialize/: up.sql
migrations/2020-07-14-190705_posts/: up.sql
migrations/2020-07-14-190712_tags/: up.sql
migrations/2020-07-14-190724_post_tag_relation/: down.sql  up.sql
src/: fairings.rs  main.rs  models.rs  routes.rs  templates.rs
src/fairings/: mod.rs
src/models/: mod.rs  schema.rs
src/routes/: admin.rs  mod.rs  public.rs
src/templates/: mod.rs
static/: site.webmanifest
static/css/: gruvbox.css  gruvbox.css.map  style.css  style.css.map
static/js/: script.js
